# app_server

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  setup.cfg
.github/workflows/: publish-test.yml  publish.yml
example/: Pipfile  start.sh
example/deploy/: app.yaml  main.py
example/deploy/static/style/: style.css
src/app_server/: __init__.py
src/app_server/storage/: __init__.py  server.py  settings.py  storage.py
src/app_server/storage/handlers/: buckets.py  objects.py
src/app_server/tasks/: __init__.py  server.py
src/app_server/tasks/proto/: cloudtasks_pb2.py  cloudtasks_pb2_grpc.py  queue_pb2.py  task_pb2.py
