[metadata]
name = app_server
version = attr: app_server.__version__
author = Andreas H. Kelch
author_email = ak@mausbrand.de
description = a lightweight web application launcher for gunicorn and static files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XeoN-GHMB/app_server
project_urls =
    Bug Tracker = https://github.com/XeoN-GHMB/app_server/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    werkzeug>=2.0.1
    pyyaml>=5.4.1
    gunicorn>=20.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    app_server = app_server:main